--- a/ios/Daily/Info.plist
+++ b/ios/Daily/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,26 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AncizarSans-Black.ttf</string>
+		<string>AncizarSans-BlackItalic.ttf</string>
+		<string>AncizarSans-Bold.ttf</string>
+		<string>AncizarSans-BoldItalic.ttf</string>
+		<string>AncizarSans-ExtraBold.ttf</string>
+		<string>AncizarSans-ExtraBoldItalic.ttf</string>
+		<string>AncizarSans-ExtraLight.ttf</string>
+		<string>AncizarSans-ExtraLightItalic.ttf</string>
+		<string>AncizarSans-Italic.ttf</string>
+		<string>AncizarSans-Light.ttf</string>
+		<string>AncizarSans-LightItalic.ttf</string>
+		<string>AncizarSans-Medium.ttf</string>
+		<string>AncizarSans-MediumItalic.ttf</string>
+		<string>AncizarSans-Regular.ttf</string>
+		<string>AncizarSans-SemiBold.ttf</string>
+		<string>AncizarSans-SemiBoldItalic.ttf</string>
+		<string>AncizarSans-Thin.ttf</string>
+		<string>AncizarSans-ThinItalic.ttf</string>
+	</array>
 </dict>
 </plist>
